bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: ';' expected but 'true' found.
  if (10<=n) is true {
                ^