bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (10<=n) is true {
    return true
  }
}

nearHundred(93)